--- a/trunk/shaman/ui/transactionDialog.ui
+++ b/trunk/shaman/ui/transactionDialog.ui
@@ -186,8 +186,14 @@
      <property name="text" >
       <string>Please Wait...</string>
      </property>
+     <property name="scaledContents" >
+      <bool>true</bool>
+     </property>
      <property name="alignment" >
       <set>Qt::AlignCenter</set>
+     </property>
+     <property name="wordWrap" >
+      <bool>true</bool>
      </property>
     </widget>
    </item>
