--- a/trunk/shaman/ui/upgradeDialog.ui
+++ b/trunk/shaman/ui/upgradeDialog.ui
@@ -29,6 +29,9 @@
          <property name="scaledContents" >
           <bool>true</bool>
          </property>
+         <property name="wordWrap" >
+          <bool>true</bool>
+         </property>
          <property name="indent" >
           <number>0</number>
          </property>
