--- a/trunk/shaman/ui/logViewer.ui
+++ b/trunk/shaman/ui/logViewer.ui
@@ -30,38 +30,12 @@
      </property>
      <layout class="QGridLayout" >
       <item row="0" column="0" >
-       <widget class="QSpinBox" name="dayFromSpin" >
-        <property name="minimum" >
-         <number>1</number>
+       <widget class="QDateEdit" name="dateFrom" >
+        <property name="displayFormat" >
+         <string>dd/MM/yyyy</string>
         </property>
-        <property name="maximum" >
-         <number>31</number>
-        </property>
-        <property name="value" >
-         <number>31</number>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" >
-       <widget class="QSpinBox" name="monthFromSpin" >
-        <property name="minimum" >
-         <number>1</number>
-        </property>
-        <property name="maximum" >
-         <number>12</number>
-        </property>
-        <property name="value" >
-         <number>12</number>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2" >
-       <widget class="QSpinBox" name="yearFromSpin" >
-        <property name="maximum" >
-         <number>2100</number>
-        </property>
-        <property name="value" >
-         <number>1990</number>
+        <property name="calendarPopup" >
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -87,38 +61,12 @@
      </property>
      <layout class="QGridLayout" >
       <item row="0" column="0" >
-       <widget class="QSpinBox" name="dayTilSpin" >
-        <property name="minimum" >
-         <number>1</number>
+       <widget class="QDateEdit" name="dateUntil" >
+        <property name="displayFormat" >
+         <string>dd/MM/yyyy</string>
         </property>
-        <property name="maximum" >
-         <number>31</number>
-        </property>
-        <property name="value" >
-         <number>31</number>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" >
-       <widget class="QSpinBox" name="monthTilSpin" >
-        <property name="minimum" >
-         <number>1</number>
-        </property>
-        <property name="maximum" >
-         <number>12</number>
-        </property>
-        <property name="value" >
-         <number>12</number>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2" >
-       <widget class="QSpinBox" name="yearTilSpin" >
-        <property name="maximum" >
-         <number>2100</number>
-        </property>
-        <property name="value" >
-         <number>2100</number>
+        <property name="calendarPopup" >
+         <bool>true</bool>
         </property>
        </widget>
       </item>
