--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -143,7 +143,7 @@
          <property name="title" >
           <string>GUI Startup</string>
          </property>
-         <layout class="QGridLayout" >
+         <layout class="QFormLayout" name="formLayout" >
           <item row="0" column="0" >
            <widget class="QCheckBox" name="startTrayBox" >
             <property name="text" >
@@ -155,6 +155,23 @@
            <widget class="QCheckBox" name="splashScreenBox" >
             <property name="text" >
              <string>Show Splashscreen</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" >
+           <widget class="QLabel" name="label_22" >
+            <property name="text" >
+             <string>Use the following language:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1" >
+           <widget class="QComboBox" name="languageCombo" >
+            <property name="maximumSize" >
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
             </property>
            </widget>
           </item>
