--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>848</width>
-    <height>644</height>
+    <height>662</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -144,34 +144,41 @@
           <string>GUI Startup</string>
          </property>
          <layout class="QFormLayout" name="formLayout" >
-          <item row="0" column="0" >
+          <item row="1" column="0" >
            <widget class="QCheckBox" name="startTrayBox" >
             <property name="text" >
              <string>Start in the System Tray</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="0" >
+          <item row="2" column="0" >
            <widget class="QCheckBox" name="splashScreenBox" >
             <property name="text" >
              <string>Show Splashscreen</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="0" >
+          <item row="3" column="0" >
            <widget class="QLabel" name="label_22" >
             <property name="text" >
              <string>Use the following language:</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="1" >
+          <item row="3" column="1" >
            <widget class="QComboBox" name="languageCombo" >
             <property name="maximumSize" >
              <size>
               <width>100</width>
               <height>16777215</height>
              </size>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0" >
+           <widget class="QCheckBox" name="disableTray" >
+            <property name="text" >
+             <string>Disable Tray Icon</string>
             </property>
            </widget>
           </item>
