Completing KApplication integration
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -543,7 +543,7 @@
    <addaction name="menuTools" />
    <addaction name="menuHelp" />
   </widget>
-  <widget class="QToolBar" name="toolBar" >
+  <widget class="QToolBar" name="mToolBar" >
    <property name="acceptDrops" >
     <bool>true</bool>
    </property>
