A better icon management
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/ui/shaman.qrc
+++ b/ui/shaman.qrc
@@ -29,10 +29,10 @@
     <file>icons/preferences-other.png</file>
     <file>icons/preferences-system.png</file>
     <file>icons/shaman/animation_source/anim06.png</file>
-    <file>icons/shaman/shaman-128.png</file>
-    <file>icons/shaman/shaman-32.png</file>
-    <file>icons/shaman/shaman-48.png</file>
-    <file>icons/shaman/shaman-64.png</file>
+    <file>icons/shaman/hi128-app-shaman.png</file>
+    <file>icons/shaman/hi32-app-shaman.png</file>
+    <file>icons/shaman/hi48-app-shaman.png</file>
+    <file>icons/shaman/hi64-app-shaman.png</file>
     <file>icons/shaman/shaman-animation.mng</file>
     <file>icons/shaman/shaman-system-is-up-to-date-128.png</file>
     <file>icons/shaman/shaman-system-is-up-to-date-16.png</file>
